<resources>
    <string name="app_name">FakeStagram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cloud_images">Cloud Images</string>
    <string name="local_images">Local Images</string>
    <string name="title_activity_local_images">LocalImagesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome to FakeStagram!</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="chooseimage">Choose Image</string>
    <string name="save">Save</string>
</resources>